--- a/.github/workflows/get-update-in-different-job.yml
+++ b/.github/workflows/get-update-in-different-job.yml
@@ -51,8 +51,6 @@ jobs:
   custom_action_update_change:
     needs: custom_action_get_change
     runs-on: ubuntu-latest
-    outputs:
-      changeRequestNumber: ${{ steps.get.outputs.change-request-number }}
     name: UPDATE change in custom_action_update_change job
     steps:
       # To use this repository's private action,
@@ -65,7 +63,7 @@ jobs:
         # Uses an action in the root directory
         id: update
         with:
-          change-request-number: ${{steps.get.outputs.change-request-number}}# Active CR
+          change-request-number: ${{needs.custom_action_get_change.outputs.changeRequestNumber}}# Active CR
           devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
           devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
           instance-url: ${{ secrets.SN_INSTANCE_URL }}
