--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -265,7 +265,8 @@ jobs:
                   change-request: '{
                       "setCloseCode": "true",
                       "attributes": {
-                          "service_offering": "f4644f31c3b2a91049c3d1ef0501310a"
+                          "service_offering": "f4644f31c3b2a91049c3d1ef0501310a",
+                          "type": "normal"
                       }
                   }'
 
