--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -265,8 +265,12 @@ jobs:
                   change-request: '{
                       "setCloseCode": "true",
                       "attributes": {
-                          "service_offering": "f4644f31c3b2a91049c3d1ef0501310a",
-                          "type": "normal"
+                          "short_description": "Automated Software Deployment",
+                          "description": "Automated Software Deployment.",
+                          "assignment_group": "a715cd759f2002002920bde8132e7018",
+                          "implementation_plan": "Software update is tested and results can be found in Test Summaries Tab.",
+                          "backout_plan": "When software fails in production, the previous software release will be re-deployed.",
+                          "test_plan": "Testing if the software was successfully deployed"
                       }
                   }'
 
