--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -85,20 +85,20 @@ jobs:
             #      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
             #  run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=devops-test-repo
 
-            - name: Sonar Cloud Analysis
-              if: success() # always() failure() success()
-              run: >
-                  mvn -B verify -DskipTests sonar:sonar
-                  -Dsonar.projectKey=$SONAR_PROJECT_KEY
-                  -Dsonar.organization=$SONAR_ORG_KEY
-                  -Dsonar.host.url=$SONAR_URL
-                  -Dsonar.login=$SONAR_TOKEN
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
-                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-                  SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
-                  SONAR_URL: ${{ secrets.SONAR_URL }}
-                  SONAR_ORG_KEY: ${{ secrets.SONAR_ORG_KEY }}
+#             - name: Sonar Cloud Analysis
+#               if: success() # always() failure() success()
+#               run: >
+#                   mvn -B verify -DskipTests sonar:sonar
+#                   -Dsonar.projectKey=$SONAR_PROJECT_KEY
+#                   -Dsonar.organization=$SONAR_ORG_KEY
+#                   -Dsonar.host.url=$SONAR_URL
+#                   -Dsonar.login=$SONAR_TOKEN
+#               env:
+#                   GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
+#                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#                   SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+#                   SONAR_URL: ${{ secrets.SONAR_URL }}
+#                   SONAR_ORG_KEY: ${{ secrets.SONAR_ORG_KEY }}
 
 #             - name: ServiceNow DevOps Sonar Scan Results
 #             # You may pin to the exact commit or the version.
