--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.test</groupId>
-	<artifactId>sonar-test-project</artifactId>
+	<artifactId>DevOps-Test</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -22,9 +22,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.sonarsource.scanner.maven</groupId>
-			<artifactId>sonar-maven-plugin</artifactId>
-			<version>3.9.0.2155</version>
+    			<groupId>org.codehaus.mojo</groupId>
+    			<artifactId>sonar-maven-plugin</artifactId>
+    			<version>3.9.1.2184</version>
 		</dependency>
 	</dependencies>
 	<properties>
@@ -35,6 +35,9 @@
 		<maven.verifier.version>1.1</maven.verifier.version>
 		<maven.clean.version>3.0.0</maven.clean.version>
 		<maven.build.helper.version>3.0.0</maven.build.helper.version>
+		
+		<maven.plugin.validation>verbose</maven.plugin.validation>
+
 		<jetty.version>9.4.11.v20180605</jetty.version>
 		<jersey.version>2.27</jersey.version>
 		<java.version>11</java.version>
@@ -63,13 +66,13 @@
 		<sonar.organization>devops-2022</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url> -->
 	</properties>
-	<version>1.37.0-SNAPSHOT</version>
+	<version>1.39.0-SNAPSHOT</version>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.6</version>
+				<version>0.8.10</version>
 				<executions>
 					<execution>
 						<id>jacoco-initialize</id>
@@ -89,7 +92,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.11.0</version>
 				<configuration>
 					<maven.compiler.source>1.8</maven.compiler.source>
 					<maven.compiler.target>1.8</maven.compiler.target>
@@ -104,7 +107,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.1.0</version>
 				<configuration>
 					<!-- <skipTests>true</skipTests> -->
 					<suiteXmlFiles>
