ran with java11

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.test</groupId>
 	<artifactId>DevOps-Test</artifactId>
@@ -22,9 +21,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    			<groupId>org.codehaus.mojo</groupId>
-    			<artifactId>sonar-maven-plugin</artifactId>
-    			<version>3.9.1.2184</version>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>3.9.1.2184</version>
 		</dependency>
 	</dependencies>
 	<properties>
@@ -35,7 +34,7 @@
 		<maven.verifier.version>1.1</maven.verifier.version>
 		<maven.clean.version>3.0.0</maven.clean.version>
 		<maven.build.helper.version>3.0.0</maven.build.helper.version>
-		
+
 		<maven.plugin.validation>verbose</maven.plugin.validation>
 
 		<jetty.version>9.4.11.v20180605</jetty.version>
