--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -103,8 +103,8 @@ jobs:
             - name: ServiceNow DevOps Sonar Scan Results
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-sonar@0ed32c6471c8191f264d4bd464f14c858032354a
-            # uses: ServiceNow/servicenow-devops-sonar@main            
-              uses: ServiceNow/servicenow-devops-sonar@v1.34.2
+            # uses: ServiceNow/servicenow-devops-sonar@v1.34.2            
+              uses: ServiceNow/servicenow-devops-sonar@main
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
@@ -129,8 +129,8 @@ jobs:
             - name: ServiceNow DevOps Unit Test Results
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-test-report@6c7ef85f6aedfb7ab17e4d17c52c14c5f2f455fd
-            # uses: ServiceNow/servicenow-devops-test-report@main            
-              uses: ServiceNow/servicenow-devops-test-report@v1.34.2
+            # uses: ServiceNow/servicenow-devops-test-report@v1.34.2            
+              uses: ServiceNow/servicenow-devops-test-report@main
               with:
                   # Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
