--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -78,6 +78,7 @@ jobs:
         filepath: 'target/DevOps-Test-1.39.0-SNAPSHOT.jar'
         vid: '${{ secrets.VERACODE_API_ID }}'
         vkey: '${{ secrets.VERACODE_API_KEY }}'
+        deleteincompletescan: 1
 #          createsandbox: 'true'
 #          sandboxname: 'SANDBOXNAME'
 #          scantimeout: 0
