--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -7,7 +7,7 @@
 
 name: Veracode Static Analysis Pipeline Scan
 
-on: workflow_dispatch
+on: workflow_call
 #   push:
 #     branches: [ "main" ]
 #   pull_request:
