--- a/.github/workflows/custom-task-with-security.yml
+++ b/.github/workflows/custom-task-with-security.yml
@@ -175,85 +175,85 @@ jobs:
         needs: test
         runs-on: ubuntu-latest
         steps:
-            - name: ServiceNow DevOps Register Artifact
-            # You may pin to the exact commit or the version.
-            # uses: ServiceNow/servicenow-devops-register-artifact@6312802fd9eecd4a57b13216e968b8cae4ff6fe4
-              uses: ServiceNow/servicenow-devops-register-artifact@main
-              with:
-                  # Devops Integration User Name
-                  devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
-                  # Devops Integration User Password
-                  devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
-                  # ServiceNow Instance URL
-                  instance-url: ${{ secrets.SN_INSTANCE_URL }}
-                  # Orchestration Tool Id
-                  tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-                  # Display Name of the Job
-                  job-name: 'Integration Tests'
-                  # Github Context
-                  context-github: ${{ toJSON(github) }}
-                  # List of Artifacts to be registered
-                  artifacts: '[
-                      {
-                          "name": "app-devops.jar",
-                          "version": "1.${{ github.run_number }}",
-                          "semanticVersion": "1.${{ github.run_number }}.0",
-                          "repositoryName": "${{ github.repository }}"
-                      },
-                      {
-                          "name": "app-devops-integrations.jar",
-                          "version": "1.${{ github.run_number }}",
-                          "semanticVersion": "1.${{ github.run_number }}.0",
-                          "repositoryName": "${{ github.repository }}"
-                      },
-                      {
-                          "name": "app-devops-workspace.jar",
-                          "version": "1.${{ github.run_number }}",
-                          "semanticVersion": "1.${{ github.run_number }}.0",
-                          "repositoryName": "${{ github.repository }}"
-                      }
-                  ]'
+#             - name: ServiceNow DevOps Register Artifact
+#             # You may pin to the exact commit or the version.
+#             # uses: ServiceNow/servicenow-devops-register-artifact@6312802fd9eecd4a57b13216e968b8cae4ff6fe4
+#               uses: ServiceNow/servicenow-devops-register-artifact@main
+#               with:
+#                   # Devops Integration User Name
+#                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+#                   # Devops Integration User Password
+#                   devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+#                   # ServiceNow Instance URL
+#                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
+#                   # Orchestration Tool Id
+#                   tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+#                   # Display Name of the Job
+#                   job-name: 'Integration Tests'
+#                   # Github Context
+#                   context-github: ${{ toJSON(github) }}
+#                   # List of Artifacts to be registered
+#                   artifacts: '[
+#                       {
+#                           "name": "app-devops.jar",
+#                           "version": "1.${{ github.run_number }}",
+#                           "semanticVersion": "1.${{ github.run_number }}.0",
+#                           "repositoryName": "${{ github.repository }}"
+#                       },
+#                       {
+#                           "name": "app-devops-integrations.jar",
+#                           "version": "1.${{ github.run_number }}",
+#                           "semanticVersion": "1.${{ github.run_number }}.0",
+#                           "repositoryName": "${{ github.repository }}"
+#                       },
+#                       {
+#                           "name": "app-devops-workspace.jar",
+#                           "version": "1.${{ github.run_number }}",
+#                           "semanticVersion": "1.${{ github.run_number }}.0",
+#                           "repositoryName": "${{ github.repository }}"
+#                       }
+#                   ]'
 
-            - name: ServiceNow DevOps Register Package
-            # You may pin to the exact commit or the version.
-            # uses: ServiceNow/servicenow-devops-register-package@96a351e6f06e592011b9bdd7da5b2af26506d86b
-              uses: ServiceNow/servicenow-devops-register-package@main
-              with:
-                  # ServiceNow Devops Integration User Name
-                  devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
-                  # ServiceNow Devops Integration User Password
-                  devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
-                  # ServiceNow Instance URL
-                  instance-url: ${{ secrets.SN_INSTANCE_URL }}
-                  # Orchestration Tool Id of the tool created in ServiceNow
-                  tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-                  # Github Context
-                  context-github: ${{ toJSON(github) }}
-                  # List of Artifacts in JSON format
-                  artifacts: '[
-                      {
-                          "name": "app-devops.jar",
-                          "version": "1.${{ github.run_number }}",
-                          "semanticVersion": "1.${{ github.run_number }}.0",
-                          "repositoryName": "${{ github.repository }}"
-                      },
-                      {
-                          "name": "app-devops-integrations.jar",
-                          "version": "1.${{ github.run_number }}",
-                          "semanticVersion": "1.${{ github.run_number }}.0",
-                          "repositoryName": "${{ github.repository }}"
-                      },
-                      {
-                          "name": "app-devops-workspace.jar",
-                          "version": "1.${{ github.run_number }}",
-                          "semanticVersion": "1.${{ github.run_number }}.0",
-                          "repositoryName": "${{ github.repository }}"
-                      }
-                  ]'
-                  # Name of the Package that contains list of artifacts
-                  package-name: 'app-devops-change-velocity.war'
-                  # Display Name of Job
-                  job-name: 'Integration Tests'
+#             - name: ServiceNow DevOps Register Package
+#             # You may pin to the exact commit or the version.
+#             # uses: ServiceNow/servicenow-devops-register-package@96a351e6f06e592011b9bdd7da5b2af26506d86b
+#               uses: ServiceNow/servicenow-devops-register-package@main
+#               with:
+#                   # ServiceNow Devops Integration User Name
+#                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+#                   # ServiceNow Devops Integration User Password
+#                   devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+#                   # ServiceNow Instance URL
+#                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
+#                   # Orchestration Tool Id of the tool created in ServiceNow
+#                   tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+#                   # Github Context
+#                   context-github: ${{ toJSON(github) }}
+#                   # List of Artifacts in JSON format
+#                   artifacts: '[
+#                       {
+#                           "name": "app-devops.jar",
+#                           "version": "1.${{ github.run_number }}",
+#                           "semanticVersion": "1.${{ github.run_number }}.0",
+#                           "repositoryName": "${{ github.repository }}"
+#                       },
+#                       {
+#                           "name": "app-devops-integrations.jar",
+#                           "version": "1.${{ github.run_number }}",
+#                           "semanticVersion": "1.${{ github.run_number }}.0",
+#                           "repositoryName": "${{ github.repository }}"
+#                       },
+#                       {
+#                           "name": "app-devops-workspace.jar",
+#                           "version": "1.${{ github.run_number }}",
+#                           "semanticVersion": "1.${{ github.run_number }}.0",
+#                           "repositoryName": "${{ github.repository }}"
+#                       }
+#                   ]'
+#                   # Name of the Package that contains list of artifacts
+#                   package-name: 'app-devops-change-velocity.war'
+#                   # Display Name of Job
+#                   job-name: 'Integration Tests'
 
     deploy:
         #if: github.event.pull_request.merged == true
