--- a/.github/workflows/custom-task-with-security.yml
+++ b/.github/workflows/custom-task-with-security.yml
@@ -24,7 +24,8 @@ jobs:
         uses: pramaraju96/DevOps-Test/.github/workflows/veracode.yml@main
 #         secrets: inherit
         secrets:
-            GHP_TOKEN: ${{ secrets.GHP_TOKEN }}
+            VERACODE_API_ID: ${{ secrets.VERACODE_API_ID }}
+            VERACODE_API_KEY: ${{ secrets.VERACODE_API_KEY }}
     build:
         # Running your workflow when a pull request merges
         # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#running-your-workflow-when-a-pull-request-merges-1
