--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -65,11 +65,13 @@ jobs:
           source-base-path-1: "^com/veracode:src/main/java/com/veracode"
           source-base-path-2: "^WEB-INF:src/main/webapp/WEB-INF"
           finding-rule-level: "3:1:0"
-    
+          run: ls -a
+          
     - uses: github/codeql-action/upload-sarif@v2
       with:
         # Path to SARIF file relative to the root of the repository
         sarif_file: veracode-results.sarif
+        
 
     - name: Veracode Upload And Scan
       uses: veracode/veracode-uploadandscan-action@0.2.6
