--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -67,25 +67,25 @@ jobs:
           finding-rule-level: "3:1:0"
           run: ls -a
           
-    - uses: github/codeql-action/upload-sarif@v2
-      with:
-        # Path to SARIF file relative to the root of the repository
-        sarif_file: veracode-results.sarif
+#     - uses: github/codeql-action/upload-sarif@v2
+#       with:
+#         # Path to SARIF file relative to the root of the repository
+#         sarif_file: veracode-results.sarif
         
 
-    - name: Veracode Upload And Scan
-      uses: veracode/veracode-uploadandscan-action@0.2.6
-      with:
-        appname: 'App-DevOps-Azure-POC'
-        createprofile: false
-        filepath: 'target/DevOps-Test-1.39.0-SNAPSHOT.jar'
-        vid: '${{ secrets.VERACODE_API_ID }}'
-        vkey: '${{ secrets.VERACODE_API_KEY }}'
-#         deleteincompletescan: 1
-        scantimeout: 10
-#          createsandbox: 'true'
-#          sandboxname: 'SANDBOXNAME'
-#          scantimeout: 0
-#          exclude: '*.js'
-#          include: '*.war'
-#          criticality: 'VeryHigh'
+#     - name: Veracode Upload And Scan
+#       uses: veracode/veracode-uploadandscan-action@0.2.6
+#       with:
+#         appname: 'App-DevOps-Azure-POC'
+#         createprofile: false
+#         filepath: 'target/DevOps-Test-1.39.0-SNAPSHOT.jar'
+#         vid: '${{ secrets.VERACODE_API_ID }}'
+#         vkey: '${{ secrets.VERACODE_API_KEY }}'
+# #         deleteincompletescan: 1
+#         scantimeout: 10
+# #          createsandbox: 'true'
+# #          sandboxname: 'SANDBOXNAME'
+# #          scantimeout: 0
+# #          exclude: '*.js'
+# #          include: '*.war'
+# #          criticality: 'VeryHigh'
