--- a/.github/workflows/custom-task-with-security.yml
+++ b/.github/workflows/custom-task-with-security.yml
@@ -18,7 +18,11 @@ on: workflow_dispatch
 #  pull_request_target:
 #    types:
 #      - closed
-
+permissions:
+  actions: read
+  contents: read
+  security-events: write
+  
 jobs:
     build:
         # Running your workflow when a pull request merges
