--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -91,7 +91,7 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: 'run-veracode-scan'
-          security-result-attributes: '{"scanner": "Veracode", "applicationName": "VeracodeAPP", "buildVersion": "V1", "securityToolId": "a670e317c383e110f920550f0501310b"}'
+          security-result-attributes: '{"scanner": "Veracode", "applicationName": "App-DevOps-Azure-POC", "securityToolId": "a670e317c383e110f920550f0501310b"}'
 
   deploy:
     #if: github.event.pull_request.merged == true
