--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -85,7 +85,7 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: 'Veracode Static Analysis'
-          security-result-attributes: '{"scanner": "Veracode", "applicationName": "App-DevOps-Azure-POC"}'
+          security-result-attributes: '{ "scanner": "Veracode", "applicationName": "App-DevOps-Azure-POC", "buildVersion": "jenkins-Veracode without Step-11"}'
 
   deploy:
     #if: github.event.pull_request.merged == true
