--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -65,16 +65,16 @@ jobs:
           # Path to SARIF file relative to the root of the repository
           sarif_file: veracode-results.sarif
 
-#       - name: Veracode Upload And Scan
-#         uses: veracode/veracode-uploadandscan-action@0.2.6
-#         with:
-#           appname: 'GitHub Vera POC'
-#           createprofile: false
-#           filepath: 'target/DevOps-Test-1.39.0-SNAPSHOT.jar'
-#           vid: '${{ secrets.VERACODE_API_ID }}'
-#           vkey: '${{ secrets.VERACODE_API_KEY }}'
-#           #deleteincompletescan: 1
-#           scantimeout: 15
+      - name: Veracode Upload And Scan
+        uses: veracode/veracode-uploadandscan-action@0.2.6
+        with:
+          appname: 'GitHub Vera POC'
+          createprofile: false
+          filepath: 'target/DevOps-Test-1.39.0-SNAPSHOT.jar'
+          vid: '${{ secrets.VERACODE_API_ID }}'
+          vkey: '${{ secrets.VERACODE_API_KEY }}'
+          #deleteincompletescan: 1
+          scantimeout: 15
 
       - name: ServiceNow DevOps Security Results
         uses: maheshganji/custom-action-get@sonar
@@ -85,7 +85,7 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: 'Veracode Static Analysis'
-          security-result-attributes: '{ "scanner": "Veracode", "applicationName": "GitHub Vera POC"}'
+          security-result-attributes: '{ "scanner": "Veracode", "applicationName": "PetStoreAPI-Github"}'
 
   deploy:
     #if: github.event.pull_request.merged == true
