--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -85,7 +85,7 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: 'Veracode Static Analysis'
-          security-result-attributes: '{ "scanner": "Veracode", "applicationName": "PetStoreAPI-Github"}' 
+          security-result-attributes: '{ "scanner": "Veracode", "applicationName": "PetStoreAPI-Github", "securityToolId": "a670e317c383e110f920550f0501310b" }'
 
   deploy:
     #if: github.event.pull_request.merged == true
