One security tool in sn_devops_tool, mapped, not passed as securityToolId

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -65,17 +65,17 @@ jobs:
 #           # Path to SARIF file relative to the root of the repository
 #           sarif_file: veracode-results.sarif
 
-#       - name: Veracode Upload And Scan
-#         uses: veracode/veracode-uploadandscan-action@0.2.6
-#         with:
-#           appname: 'PetStoreAPI-Github'
-#           createprofile: false
-#           filepath: 'target/DevOps-Test-1.39.0-SNAPSHOT.jar'
-# #           version: ${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
-#           vid: '${{ secrets.VERACODE_API_ID }}'
-#           vkey: '${{ secrets.VERACODE_API_KEY }}'
-#           #deleteincompletescan: 1
-#           scantimeout: 15
+      - name: Veracode Upload And Scan
+        uses: veracode/veracode-uploadandscan-action@0.2.6
+        with:
+          appname: 'PetStoreAPI-Github'
+          createprofile: false
+          filepath: 'target/DevOps-Test-1.39.0-SNAPSHOT.jar'
+#           version: ${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
+          vid: '${{ secrets.VERACODE_API_ID }}'
+          vkey: '${{ secrets.VERACODE_API_KEY }}'
+          #deleteincompletescan: 1
+          scantimeout: 15
 
       - name: ServiceNow DevOps Security Results
         uses: maheshganji/custom-action-get@sonar
@@ -86,7 +86,7 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: 'Veracode Static Analysis'
-          security-result-attributes: '{ "scanner": "Veracode", "applicationName": "PetStoreAPI-Github", "securityToolId": "a670e317c383e110f920550f0501310b" }'
+          security-result-attributes: '{ "scanner": "Veracode", "applicationName": "PetStoreAPI-Github" }'
 
   deploy:
     #if: github.event.pull_request.merged == true
